--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "heroku-postbuild": "cd server && npx knex migrate:latest",
     "client": "cd client && yarn start",
-    "server": "cd server && nodemon server.js",
+    "server": "cd server && ts-node-dev --respawn server.ts",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "test": "cd server && jest",
     "test:watch": "cd server && jest --watch",
@@ -12,16 +12,22 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "jest": "^24.9.0",
-    "knex": "^0.20.5",
+    "knex": "^3.1.0",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
-    "pg": "^7.14.0",
-    "supertest": "^4.0.2"
+    "pg": "^8.16.3",
+    "supertest": "^4.0.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.13",
     "concurrently": "^4.0.1"
   }
 }
