--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-PGUSER=
+PGUSER=postgres
 PGHOST=localhost
-PGPASSWORD=
-PGDATABASE=
+PGPASSWORD=test1234
+PGDATABASE=todo_app
 PGPORT=5432
 PORT=5000
